--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Let\'s Chat</string>
+    <string name="app_name">Let Us Chat</string>
     <string name="textView">Main</string>
     <string name="Register">Register</string>
     <string name="username">Username</string>
