--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="create_an_account">Create an account</string>
-    <string name="welcome">Welcome to Let\'s Chat </string>
+    <string name="welcome">Welcome to Let Us Chat </string>
     <string name="logout">Logout</string>
     <string name="users">Users</string>
     <string name="settings">Settings</string>
